fix modal height and vertical alignement (mobile)

--- a/src/app.scss
+++ b/src/app.scss
@@ -27,10 +27,12 @@ $primary-700: #c2185b;
     position: fixed; 
     
     @media (max-width: 575px) {
-        top: var(--spacing); 
+        top: 50%; 
         left: var(--spacing); 
-        width: calc(100vw - 2*var(--spacing)); 
-        height: calc(100vh - 2*var(--spacing));
+        width: calc(100vw - 2*var(--spacing));
+        transform: translate(0, -50%);
+        height: auto; 
+        max-height: calc(100vh - 2*var(--spacing));
         margin:0;
     }
 
